Overflow issue fixed && better scorllbar

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -23,6 +23,27 @@
 	color: var(--main-text-color);
 }
 
+/* width */
+::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: var(--profile-pic-background-color);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: var(--link-color);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
 :not(.markdown-container *, i) {
 	margin: 0;
 	padding: 0;
